# franka_LfD

./: CMakeLists.txt  README.md  franka_LfD.xml  package.xml  setup.py
cfg/: compliance_param.cfg  desired_mass_param.cfg  dual_arm_compliance_param.cfg  teleop_gripper_param.cfg  teleop_param.cfg
config/: LfD_params.yaml  franka_custom_controllers.yaml  learning_params.yaml
data/: gripper_state_act.txt  gripper_state_demo.txt  gripper_state_demo2.txt  rob_pose.txt  rob_pose_actual.txt  rob_pose_demo.txt  rob_pose_quat_actual.txt  rob_pose_quat_demo.txt  skill_0.txt  skill_1.txt  skill_2.txt  skill_3.txt  skill_quat_0.txt  skill_quat_1.txt  skill_quat_2.txt  skill_quat_3.txt  state_list.txt  testangvel.asv  testangvel.m  toygripp.m
include/: cartesian_impedance_controller.h  gripper_controller.h  joystick_reader.h  null_space_controller.h  pseudo_inversion.h  skill_traj_publisher.h  utility.h
launch/: cartesian_impedance_controller.launch  franka_lfd.launch  temp.launch
scripts/: dmp_quat.py  dual_arm_interactive_marker.py  learn_traj_server.py  myQuaternion.py  robot_plot.py  skill_learning.py  skill_learning_grasp.py
src/: cartesian_impedance_controller.cpp  franka_ws.code-workspace  gripper_controller.cpp  gripper_controller_node.cpp  joystick_reader.cpp  joystick_reader_node.cpp  null_space_controller.cpp  skill_traj_publisher.cpp  skill_traj_publisher_node.cpp  temp  test_random  test_random.cpp  test_serv.cpp  utility.cpp
src/franka_LfD/: dmp.py  dmp_quat.py  learn_skill.py  lwr.py  lwr_quat.py  myQuaternion.py  robot_plot.py  skill_learning.py  skill_learning_grasp.py
